Fix electric field demo spacing by reducing demo component bottom margin
Reduces bottom margin of .demo-component from 1rem to 0.25rem to minimize
blank space between integrated demos and following text. Also reverts
unnecessary HTML changes since direct integration doesn't use iframe.

--- a/static/main.css
+++ b/static/main.css
@@ -222,7 +222,7 @@ table th {
 /* Direct integration demo component */
 .demo-component {
     position: relative;
-    margin: 1rem 0;
+    margin: 1rem 0 0.25rem 0;
     min-height: 400px;
     width: 100%;
 }
